--- a/backend/inventory-module/inventory/pom.xml
+++ b/backend/inventory-module/inventory/pom.xml
@@ -63,6 +63,10 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+				<groupId>com.spotify</groupId>
+				<artifactId>docker-maven-plugin</artifactId>
+			</plugin>
 		</plugins>
 	</build>
 
