Backend: Extracted module-parent pom. Added config-server module. Start Docker containers with start_containers.sh (almost done). Use service registry for module url.

--- a/backend/common/common-base/src/test/resources/application.properties
+++ b/backend/common/common-base/src/test/resources/application.properties
@@ -1,6 +1,6 @@
 # mongodb configuration
 spring.data.mongodb.uri=mongodb://localhost:27017/inttest
-module.environment.baseUri=http://localhost:8080/
-module.product.baseUri=http://localhost:8080/
-module.inventory.baseUri=http://localhost:8080/
-module.facility.baseUri=http://localhost:8080/
+module.mos_erp_environment_module.baseUri=http://localhost:8080/
+module.mos_erp_product_module.baseUri=http://localhost:8080/
+module.mos_erp_inventory_module.baseUri=http://localhost:8080/
+module.mos_erp_facility_module.baseUri=http://localhost:8080/
