--- a/backend/environment-module/environment/pom.xml
+++ b/backend/environment-module/environment/pom.xml
@@ -6,9 +6,9 @@
 
     <parent>
         <groupId>org.moserp</groupId>
-        <artifactId>environment-module</artifactId>
+        <artifactId>module-parent</artifactId>
         <version>1.0.0-SNAPSHOT</version>
-        <relativePath>../pom.xml</relativePath>
+        <relativePath>../../module-parent/pom.xml</relativePath>
     </parent>
 
     <artifactId>environment</artifactId>
@@ -16,43 +16,9 @@
     <dependencies>
         <dependency>
             <groupId>org.moserp</groupId>
-            <artifactId>common-base</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-eureka</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.moserp</groupId>
-            <artifactId>common-structure</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.moserp</groupId>
             <artifactId>environment-domain</artifactId>
             <version>${project.version}</version>
         </dependency>
-        <dependency>
-            <groupId>org.moserp</groupId>
-            <artifactId>common-base</artifactId>
-            <classifier>tests</classifier>
-            <version>${project.version}</version>
-            <scope>test</scope>
-        </dependency>
     </dependencies>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-            <plugin>
-                <groupId>com.spotify</groupId>
-                <artifactId>docker-maven-plugin</artifactId>
-            </plugin>
-        </plugins>
-    </build>
 
 </project>
