--- a/backend/product-module/product/pom.xml
+++ b/backend/product-module/product/pom.xml
@@ -5,9 +5,9 @@
 
     <parent>
         <groupId>org.moserp</groupId>
-        <artifactId>product-module</artifactId>
+        <artifactId>module-parent</artifactId>
         <version>1.0.0-SNAPSHOT</version>
-        <relativePath>../pom.xml</relativePath>
+        <relativePath>../../module-parent/pom.xml</relativePath>
     </parent>
 
     <artifactId>product</artifactId>
@@ -15,43 +15,14 @@
     <dependencies>
         <dependency>
             <groupId>org.moserp</groupId>
-            <artifactId>common-base</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.moserp</groupId>
-            <artifactId>common-structure</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.moserp</groupId>
             <artifactId>product-domain</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-eureka</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.moserp</groupId>
-            <artifactId>common-base</artifactId>
-            <version>${project.version}</version>
-            <classifier>tests</classifier>
-            <scope>test</scope>
+            <groupId>com.google.zxing</groupId>
+            <artifactId>javase</artifactId>
+            <version>${zxing.version}</version>
         </dependency>
     </dependencies>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-            <plugin>
-                <groupId>com.spotify</groupId>
-                <artifactId>docker-maven-plugin</artifactId>
-            </plugin>
-        </plugins>
-    </build>
 
 </project>
