--- a/backend/eureka-server/src/main/docker/Dockerfile
+++ b/backend/eureka-server/src/main/docker/Dockerfile
@@ -1,7 +1,6 @@
 FROM java:8
-ADD config-server-1.0.0-SNAPSHOT.jar app.jar
 VOLUME /tmp
-VOLUME /target
+ADD eureka-server-1.0.0-SNAPSHOT.jar /app.jar
 RUN bash -c 'touch /app.jar'
-EXPOSE 8888
+EXPOSE 8761
 ENTRYPOINT ["java","-Xmx256M","-Djava.security.egd=file:/dev/./urandom","-jar","/app.jar"]
