Backend: Configured LDAP authentication and authorisation - Fixes

--- a/backend/environment-module/environment/src/main/resources/application.yml
+++ b/backend/environment-module/environment/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
       uri: mongodb://${MONGO_URL}/environment
 ldap:
   contextSource:
-    url: ldap://172.17.0.3:389/
+    url: ${LDAP_URL}
     userDn: cn=admin,dc=moserp,dc=org
     password: Nosfols6
 
