--- a/backend/inventory-module/inventory/src/main/resources/bootstrap.yml
+++ b/backend/inventory-module/inventory/src/main/resources/bootstrap.yml
@@ -4,3 +4,12 @@ spring:
   cloud:
     config:
       uri: ${CONFIG_SERVER_URL:http://localhost:8888}
+
+eureka:
+  instance:
+    nonSecurePort: ${server.port:9304}
+    preferIpAddress: true
+    statusPageUrlPath: /structure
+  client:
+    serviceUrl:
+      defaultZone: ${EUREKA_URL:http://localhost:8761}/eureka/
