--- a/backend/inventory-module/inventory/src/test/resources/application.properties
+++ b/backend/inventory-module/inventory/src/test/resources/application.properties
@@ -1,6 +1,6 @@
 # mongodb configuration
 spring.data.mongodb.uri=mongodb://localhost:27017/inttest
-module.environment.baseUri=http://localhost:8080/
-module.product.baseUri=http://localhost:8080/
-module.inventory.baseUri=http://localhost:8080/
-module.facility.baseUri=http://localhost:8080/
+MOS_ERP_ENVIRONMENT_MODULE.baseUri=http://localhost:8080/
+MOS_ERP_PRODUCT_MODULE.baseUri=http://localhost:8080/
+MOS_ERP_FACILITY_MODULE.baseUri=http://localhost:8080/
+MOS_ERP_INVENTORY_MODULE.baseUri=http://localhost:8080/
