--- a/backend/facility-module/facility/src/main/resources/application.yml
+++ b/backend/facility-module/facility/src/main/resources/application.yml
@@ -3,9 +3,9 @@ server:
 spring:
   data:
     mongodb:
-      uri: mongodb://localhost:27017/facility
+      uri: mongodb://${MONGO_URL:localhost:27017}/facility
 ldap:
   contextSource:
     url: ${LDAP_URL}
     userDn: cn=admin,dc=moserp,dc=org
-    password: Nosfols6
+    password: ${LDAP_PASSWORD}
