--- a/backend/environment-module/environment/src/main/resources/bootstrap.yml
+++ b/backend/environment-module/environment/src/main/resources/bootstrap.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: mos_erp_environment_module
+    name: environment.moserp.org
   cloud:
     config:
       enabled: true
