Added travis file

--- a/backend/common/common-base/src/test/resources/application.properties
+++ b/backend/common/common-base/src/test/resources/application.properties
@@ -1,6 +1,6 @@
 # mongodb configuration
 spring.data.mongodb.uri=mongodb://localhost:27017/inttest
-module.mos_erp_environment_module.baseUri=http://localhost:8080/
-module.mos_erp_product_module.baseUri=http://localhost:8080/
-module.mos_erp_inventory_module.baseUri=http://localhost:8080/
-module.mos_erp_facility_module.baseUri=http://localhost:8080/
+environment.moserp.org.baseUri=http://localhost:8080/
+product.moserp.org.baseUri=http://localhost:8080/
+inventory.moserp.org.baseUri=http://localhost:8080/
+facility.moserp.org.baseUri=http://localhost:8080/
