--- a/backend/inventory-module/inventory/src/test/resources/application.properties
+++ b/backend/inventory-module/inventory/src/test/resources/application.properties
@@ -1,6 +1,6 @@
 # mongodb configuration
 spring.data.mongodb.uri=mongodb://localhost:27017/inttest
-MOS_ERP_ENVIRONMENT_MODULE.baseUri=http://localhost:8080/
-MOS_ERP_PRODUCT_MODULE.baseUri=http://localhost:8080/
-MOS_ERP_FACILITY_MODULE.baseUri=http://localhost:8080/
-MOS_ERP_INVENTORY_MODULE.baseUri=http://localhost:8080/
+environment.moserp.org.baseUri=http://localhost:8080/
+product.moserp.org.baseUri=http://localhost:8080/
+inventory.moserp.org.baseUri=http://localhost:8080/
+facility.moserp.org.baseUri=http://localhost:8080/
