--- a/backend/common/common-base/pom.xml
+++ b/backend/common/common-base/pom.xml
@@ -21,7 +21,7 @@
         <dependency>
             <groupId>com.github.isrsal</groupId>
             <artifactId>spring-mvc-logger</artifactId>
-            <version>0.3-SNAPSHOT</version>
+            <version>0.2</version>
         </dependency>
         <dependency>
             <groupId>cz.jirutka.spring</groupId>
