--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
 language: java
-script: mvn -f backend/pom.xml -Pinttest clean verify
+script: mvn -f spring-mvc-logger/pom.xml clean install & mvn -f backend/pom.xml -Pinttest clean verify
 jdk:
   - oraclejdk8
