--- a/.travis.yml
+++ b/.travis.yml
@@ -2,3 +2,5 @@ language: java
 script: mvn -f spring-mvc-logger/pom.xml clean install & mvn -f backend/pom.xml -Pinttest clean verify
 jdk:
   - oraclejdk8
+services:
+  - mongodb
