--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: java
-script: mvn -f spring-mvc-logger/pom.xml clean install & mvn -f backend/pom.xml -Pinttest clean verify
+script: mvn -f spring-mvc-logger/pom.xml clean install & mvn -f backend/pom.xml -Pdocker package & mvn -f backend/pom.xml -Pinttest verify 
 jdk:
   - oraclejdk8
 services:
   - mongodb
+  - docker
