--- a/backend/sales-module/pom.xml
+++ b/backend/sales-module/pom.xml
@@ -5,7 +5,7 @@
 
     <parent>
         <groupId>org.moserp</groupId>
-        <artifactId>parent</artifactId>
+        <artifactId>backend</artifactId>
         <version>1.0.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
