--- a/backend/config-server/src/main/docker/Dockerfile
+++ b/backend/config-server/src/main/docker/Dockerfile
@@ -1,5 +1,7 @@
 FROM java:8
 ADD config-server-1.0.0-SNAPSHOT.jar app.jar
+ADD selfsigned.cer /selfsigned.cer
+RUN bash -c 'keytool -import -file selfsigned.cer -alias selfsigned -noprompt -storepass changeit'
 VOLUME /tmp
 VOLUME /target
 RUN bash -c 'touch /app.jar'
