--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,10 @@
 language: java
-script: mvn -f spring-mvc-logger/pom.xml clean install & mvn -f backend/pom.xml -Pdocker
-  package & mvn -f backend/pom.xml -Pinttest verify
+script: mvn -f spring-mvc-logger/pom.xml clean install & mvn -f backend/pom.xml -Pdocker package & mvn -f backend/pom.xml -Pinttest verify
 jdk:
-- oraclejdk8
+  - oraclejdk8
 services:
-- mongodb
-- docker
+  - mongodb
+  - docker
 deploy:
   provider: releases
   api_key:
