--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,6 @@
 language: java
+before_script:
+  - mongo mydb_test --eval 'db.addUser("travis", "test");'
 script: mvn -f spring-mvc-logger/pom.xml clean install & mvn -f backend/pom.xml -Pdocker package & mvn -f backend/pom.xml -Pinttest verify
 jdk:
   - oraclejdk8
