--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,14 @@
 language: java
-before_script:
-  - mongo mydb_test --eval 'db.addUser("travis", "test");'
+services:
+  - mongodb
+  - docker
+#before_script:
+#  - mongo mydb_test --eval 'db.addUser("travis", "test");'
 script: mvn -f spring-mvc-logger/pom.xml clean install & mvn -f backend/pom.xml -Pdocker package & mvn -f backend/pom.xml -Pinttest verify
 after_failure:
   - sudo dmesg
 jdk:
   - oraclejdk8
-services:
-  - mongodb
-  - docker
 deploy:
   provider: releases
   api_key:
