--- a/gui/inventory-web/package.json
+++ b/gui/inventory-web/package.json
@@ -17,9 +17,11 @@
   },
   "dependencies": {
     "angular": "~1.4.0",
-    "angular-route": "~1.4.0",
+    "angular-cookies": "^1.4.8",
     "angular-loader": "~1.4.0",
     "angular-mocks": "~1.4.0",
-    "eureka-js-client": "~1.6.1"
+    "angular-route": "~1.4.0",
+    "eureka-js-client": "~1.6.1",
+    "jquery": "^2.1.4"
   }
 }
