--- a/backend/module-parent/pom.xml
+++ b/backend/module-parent/pom.xml
@@ -26,6 +26,11 @@
         </dependency>
         <dependency>
             <groupId>org.moserp</groupId>
+            <artifactId>common-json-schema</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.moserp</groupId>
             <artifactId>eureka-server</artifactId>
             <version>${project.version}</version>
             <scope>provided</scope>
