--- a/gui/inventory-web/package.json
+++ b/gui/inventory-web/package.json
@@ -4,6 +4,34 @@
   "version": "1.0.0",
   "description": "A WEB client for the MOS ERP suite",
   "repository": "https://github.com/thomasletsch/moserp",
+  "jspm": {
+    "directories": {
+      "baseURL": "app",
+      "lib": "app/src"
+    },
+    "dependencies": {
+      "angular": "github:angular/bower-angular@^1.4.8",
+      "angular-animate": "github:angular/bower-angular-animate@^1.4.8",
+      "angular-aria": "github:angular/bower-angular-aria@^1.4.8",
+      "angular-cookies": "npm:angular-cookies@1.4.8",
+      "angular-material": "github:angular/bower-material@master",
+      "angular-messages": "github:angular/bower-angular-messages@^1.4.8",
+      "angular-schema-form": "npm:angular-schema-form@0.8.12",
+      "angular-schema-form-bootstrap": "npm:angular-schema-form-bootstrap@^0.2.0",
+      "angular-ui-bootstrap": "npm:angular-ui-bootstrap@^0.14.3",
+      "angular-ui-router": "github:angular-ui/ui-router@^0.2.15",
+      "bootstrap": "npm:bootstrap@^3.3.6",
+      "css": "github:systemjs/plugin-css@^0.1.6",
+      "eureka-js-client": "npm:eureka-js-client@1.6.1",
+      "jquery": "npm:jquery@2.1.4",
+      "json": "github:systemjs/plugin-json@^0.1.0",
+      "text": "github:systemjs/plugin-text@^0.0.2"
+    },
+    "devDependencies": {
+      "traceur": "github:jmcriffey/bower-traceur@0.0.93",
+      "traceur-runtime": "github:jmcriffey/bower-traceur-runtime@0.0.93"
+    }
+  },
   "devDependencies": {
     "http-server": "^0.6.1",
     "jasmine-core": "^2.3.4",
@@ -14,15 +42,5 @@
     "karma-junit-reporter": "^0.2.2",
     "protractor": "^2.1.0",
     "shelljs": "^0.2.6"
-  },
-  "dependencies": {
-    "angular": "~1.4.0",
-    "angular-cookies": "^1.4.8",
-    "angular-loader": "~1.4.0",
-    "angular-mocks": "~1.4.0",
-    "angular-route": "~1.4.0",
-    "eureka-js-client": "~1.6.1",
-    "jquery": "^2.1.4",
-    "requirejs": "^2.1.22"
   }
 }
