--- a/gui/inventory-web/package.json
+++ b/gui/inventory-web/package.json
@@ -17,7 +17,10 @@
       "angular-messages": "github:angular/bower-angular-messages@^1.4.8",
       "angular-schema-form": "npm:angular-schema-form@0.8.12",
       "angular-schema-form-bootstrap": "npm:angular-schema-form-bootstrap@^0.2.0",
+      "angular-translate": "github:angular-translate/bower-angular-translate@^2.8.1",
+      "angular-translate-loader-static-files": "github:angular-translate/bower-angular-translate-loader-static-files@^2.8.1",
       "angular-ui-bootstrap": "npm:angular-ui-bootstrap@^0.14.3",
+      "angular-ui-grid": "github:angular-ui/bower-ui-grid@^3.0.7",
       "angular-ui-router": "github:angular-ui/ui-router@^0.2.15",
       "bootstrap": "npm:bootstrap@^3.3.6",
       "css": "github:systemjs/plugin-css@^0.1.6",
