--- a/backend/infrastructure/config-service/src/main/resources/bootstrap.yml
+++ b/backend/infrastructure/config-service/src/main/resources/bootstrap.yml
@@ -1,10 +1,10 @@
 spring:
   application:
-    name: config-server
+    name: config-service
 
 eureka:
   instance:
     nonSecurePort: ${server.port:8888}
   client:
     serviceUrl:
-      defaultZone: http://${EUREKA_URL:localhost:8761}/eureka/
+      defaultZone: ${EUREKA_URL:localhost:8761}/eureka/
