--- a/backend/infrastructure/pom.xml
+++ b/backend/infrastructure/pom.xml
@@ -8,18 +8,15 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>eureka-server</artifactId>
+    <artifactId>infrastructure</artifactId>
+    <packaging>pom</packaging>
 
-    <dependencies>
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-eureka-server</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-security</artifactId>
-        </dependency>
-    </dependencies>
+    <modules>
+        <module>config-service</module>
+        <module>gateway-service</module>
+        <module>registry-service</module>
+        <module>authentication-service</module>
+    </modules>
 
     <build>
         <plugins>
