--- a/backend/infrastructure/authentication-service/src/main/resources/application.yml
+++ b/backend/infrastructure/authentication-service/src/main/resources/application.yml
@@ -1,18 +1,19 @@
 spring:
   profiles: local
+
 logging:
   level:
      org:
        springframework:
          security: DEBUG
-         web: INFO
+
 server:
-  port: 8899
-  contextPath: /uaa
+  context-path: /uaa
   ssl:
     key-store: classpath:keystore.jks
     key-store-password: password
     key-password: password
+
 security:
   oauth2:
     client:
